Make sure article teaser doesn't show hero paragraph wrapping markup.
Rearrange article detail markup to make more sense.

--- a/web/themes/custom/sagebootstrap/scss/components/node-type-news-article.scss
+++ b/web/themes/custom/sagebootstrap/scss/components/node-type-news-article.scss
@@ -1,4 +1,4 @@
-.node--type-article {
+.node--type-article.node--view-mode-teaser {
   text-align: center;
   .views-field-field-thumbnail-image {
     margin-bottom: 15px;
